Fix icon misalignements

--- a/ui/app/assets/widgets/notifications/notifications.less
+++ b/ui/app/assets/widgets/notifications/notifications.less
@@ -41,7 +41,7 @@
     width: 20px;
     height: 20px;
     .shape {
-      padding: 4px;
+      padding: 1px;
       g {
         fill: white;
       }
